kubernetes/apps/kube-system/cilium/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Network
    gethomepage.dev/name: Cilium
    gethomepage.dev/icon: cilium.png
spec:
  hostnames: ["hubble.derekjacobs.dev"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
